--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.13",
     "lz-string": "^1.4.4",
     "moment": "^2.22.2",
+    "node-sass": "^4.13.1",
     "node-sass-chokidar": "^1.3.5",
     "normalize.css": "^8.0.0",
     "npm-run-all": "^4.1.5",
